feat: adds tags resource
